--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
@@ -36,6 +37,7 @@
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.33.0",
     "eslint-plugin-vue": "~10.4.0",
+    "gh-pages": "^6.1.1",
     "jiti": "^2.5.1",
     "jsdom": "^27.0.0",
     "npm-run-all2": "^8.0.4",
@@ -44,7 +46,6 @@
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.1.0",
-    "gh-pages": "^6.1.1"
+    "vue-tsc": "^3.1.0"
   }
 }
