--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "vue": "^3.5.22",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
