--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:unit": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:update": "playwright test --update-snapshots",
-    "build-only": "vite build",
+    "build-only": "vite-ssg build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
@@ -46,6 +46,7 @@
     "typescript": "~5.9.0",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2",
+    "vite-ssg": "^28.2.2",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.1.0"
   }
